# Praktyka-2-QML

./: CMakeLists.txt
include/: PEditableImageModifierList.h  PEditableImageModifierListModel.h  PEditableImageModifierModel.h  PImageModifierExecutor.h  PImageModifierList.h  PImageModifierListModel.h  PImageProvider.h  PImageSaver.h  PImageStreamer.h  PImageTransform.h  PImageTransformationList.h  PImageTransformationModel.h  PImgurUploader.h
include/ImageModifiers/: PBrightnessImageModifier.h  PContrastImageModifier.h  PDuoToneImageModifier.h  PFlipHorizontallyImageModifier.h  PGaussianBlurImageModifier.h  PGaussianNoiseImageModifier.h  PImageModifierBase.h  PPixelateImageModifier.h  PRotateImageModifier.h  PSepiaImageModifier.h
include/ImageTransforms/: PFlipHorizontallyImageTransform.h  PImageTransformBase.h  PRotateImageTransform.h
qml/: DraggableItem.qml  PDraggableItem.qml  PImageModifierList.qml  PImageTransformationList.qml  PListItem.qml  PParameter.qml  main.qml  qml.qrc
src/: PEditableImageModifierList.cpp  PEditableImageModifierListModel.cpp  PEditableImageModifierModel.cpp  PImageModifierExecutor.cpp  PImageModifierList.cpp  PImageModifierListModel.cpp  PImageProvider.cpp  PImageSaver.cpp  PImageStreamer.cpp  PImageTransform.cpp  PImageTransformationList.cpp  PImageTransformationModel.cpp  PImgurUploader.cpp  main.cpp
src/ImageModifiers/: PBrightnessImageModifier.cpp  PContrastImageModifier.cpp  PDuoToneImageModifier.cpp  PFlipHorizontallyImageModifier.cpp  PGaussianBlurImageModifier.cpp  PGaussianNoiseImageModifier.cpp  PImageModifierBase.cpp  PPixelateImageModifier.cpp  PRotateImageModifier.cpp  PSepiaImageModifier.cpp
src/ImageTransforms/: PFlipHorizontallyImageTransform.cpp  PImageTransformBase.cpp  PRotateImageTransform.cpp
